--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body background="Mobile.logo.webp">
    <h1 align="center">Welcome the Best Mobile Website</h1>
    <hr>
-   <a href="Home.html">Home</a><a href="Models.html">Models</a><a href="Contect.html">Contect us</a><a href="Email.html">Email</a>
+   <a href="Models.html">Models</a><a href="Contect.html">Contect us</a><a href="Email.html">Email</a>
    <hr>
    <form action="">
 <p align="center">
